--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -100,6 +100,7 @@ h3 {
 
 .teamName {
 	font-size: 1.4em;
+	font-weight: bold;
 }
 
 .user-label {
@@ -134,30 +135,46 @@ img.flag {
 }
 
 .label-rank4 {
-    background-color: #1C8FBB;
+	background-color: #1C8FBB;
 }
 
 .label-rank5 {
-    background-color: #65C5DB;
+	background-color: #65C5DB;
 }
 
 .label-rank6 {
-    background-color: #843127;
+	background-color: #843127;
 }
 
 .anchor {
-    display: block;
-    position: relative;
-    top: -60px;
-    visibility: hidden;
+	display: block;
+	position: relative;
+	top: -60px;
+	visibility: hidden;
 }
 
 .blue {
-	color: blue;	
+	color: blue;
 }
 
 .red {
 	color: red;
+}
+
+button.vote {
+	width: 45%;
+}
+
+.betForm .row {
+	margin-top: 15px;
+}
+
+.color-vote {
+	background-color: #DFF0D8;
+}
+
+.penalty-height {
+	padding: 6px 12px;
 }
 
 /** justified break point for navigation collapse on tablets */
