--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -8,7 +8,7 @@
 	<div layout:fragment="content" class="container">
 		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>		
 		
-		<form id="betForm" th:action="@{/bet}" th:object="${betCommand}" action="#" method="post" role="form" class="betForm">			
+		<form id="betForm" th:action="@{/bet}" th:object="${betCommand}" action="#" method="post" role="form" class="goalsEnter">			
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<h1 th:text="#{bet.edit.heading}"></h1>
