--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -6,11 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Layout</title>
 		<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />		
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" />		
 		<!-- Optional theme -->
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap-theme.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/bootstrap-datetimepicker.min.css}" media="screen"/>	
-		<link rel="stylesheet" th:href="@{/css/custom.css}" />		
+		<link rel="stylesheet" th:href="@{/css/custom.css}" />
+		<link rel="stylesheet" th:href="@{/css/print.css}" media="print"/>		
 		<script type="text/javascript" th:src="@{/js/ckeditor/ckeditor.js}"></script>
 	</head>
 	<body>
