--- a/src/main/resources/templates/image/imageUpload.html
+++ b/src/main/resources/templates/image/imageUpload.html
@@ -14,9 +14,13 @@
 				<div class="col-xs-12 col-sm-6 col-md-4" th:each="availableImage : ${availableImages}">
 					<img th:src="@{'data:image/jpeg;base64,'+${availableImage}}" class="img-responsive"/>
 				</div>
-				
-				<form th:action="@{/image/upload}" method="post" enctype="multipart/form-data">
-			       <input type="file" name="myFile" class="form-control" />
+			</div>
+			<br/>
+			<div class="row">
+				<form th:action="@{/image/upload}" method="post" enctype="multipart/form-data" role="form">
+				    <label class="btn btn-default btn-file">
+				       <input type="file" name="myFile"  />
+				   </label>
 			       <input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
 			    </form>
 			</div>
