--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -120,6 +120,12 @@ img.flag {
 	vertical-align: baseline;
 }
 
+img.displayed {
+	display: block;
+	margin-left: auto;
+	margin-right: auto
+}
+
 .top-bottom-space {
 	padding-top: 5px;
 	padding-bottom: 5px;
