deleting an image

--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -25,7 +25,7 @@
 					    <h3 class="title"></h3>
 					    <a class="prev">&#60;</a>
 					    <a class="next">&#62;</a>
-					    <a class="close">X</a>
+					    <a class="close">x</a>
 					    <a class="play-pause"></a>
 					    <ol class="indicator"></ol>
 					</div>					
