bugfix random matches; bugfix spelling

--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -9,7 +9,9 @@
 		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>
 		<div class="row">			
 			<div class="col-xs-12 col-sm-6 col-md-4">
-				<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoMatches}" th:text="#{administration.createEmMatches}"></a>
+				<a class="btn btn-primary" role="button" th:href="@{/administration/createEmMatches}" th:text="#{administration.createEmMatches}"></a>
+				<br/><br/>
+				<a class="btn btn-primary" role="button" th:href="@{/administration/createRandomMatches}" th:text="#{administration.createRandomMatches}"></a>
 				<br/><br/>
 				<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}" th:text="#{administration.demoBetsAllUsers}"></a>
 				<br/><br/>
