--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 	<head>
@@ -24,9 +24,9 @@
 					<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
 					    <div class="slides"></div>
 					    <h3 class="title"></h3>
-					    <a class="prev">&#60;</a>
-					    <a class="next">&#62;</a>
-					    <a class="close">x</a>
+					    <a class="prev">‹</a>
+					    <a class="next">›</a>
+					    <a class="close">×</a>
 					    <a class="play-pause"></a>
 					    <ol class="indicator"></ol>
 					</div>					
