--- a/src/main/resources/templates/image/imageUpload.html
+++ b/src/main/resources/templates/image/imageUpload.html
@@ -46,14 +46,27 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<form th:action="@{/image/upload}" th:object="${imageUploadCommand}" method="post" enctype="multipart/form-data" role="form">
-						<label>Gallery Group:</label><br/>
-						<input type="text" th:field="*{galleryGroup}" class="form-control" />
-						<label>Description:</label><br/>
-						<input type="text" th:field="*{description}" class="form-control" />
-					    <label>Datei:</label><br/>
-					    <input type="file" th:field="*{myFile}" class="btn btn-default btn-file" />
-					    <br/>
-				        <input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
+						<div class="form-group">
+							<label>Gallery Group:</label><br/>
+							<select th:field="*{galleryGroup}" class="form-control">
+							  <option th:each="imageGroupName : ${availableImageGroups}" th:value="${imageGroupName}" th:text="${imageGroupName}"></option>
+							</select>
+						</div>
+						<div class="form-group">
+							<label>Gruppe bearbeiten:</label><br/>
+							<a href="#" th:href="@{/imagegroup/show}" class="btn btn-info" role="button" th:text="#{image.upload.msg.editGroup}"></a>
+						</div>
+						<div class="form-group">
+							<label>Description:</label><br/>
+							<input type="text" th:field="*{description}" class="form-control" />
+						</div>
+						<div class="form-group">
+							<label>Datei:</label><br/>
+					    	<input type="file" th:field="*{myFile}" class="btn btn-default btn-file" />
+						</div>
+						<div class="form-group">
+							<input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
+						</div>				        
 				    </form>
 			    </div>
 			</div>
