--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -30,14 +30,13 @@
 					    <a class="play-pause"></a>
 					    <ol class="indicator"></ol>
 					</div>					
-					
 					<script type="text/javascript" th:src="@{/blueimpgallery/js/blueimp-gallery.min.js}"></script>
 					<script>
 					document.getElementById('links').onclick = function (event) {
 					    event = event || window.event;
 					    var target = event.target || event.srcElement,
 					        link = target.src ? target.parentNode : target,
-					        options = {index: link, event: event},
+					        options = {index: link, event: event, fullScreen: true},
 					        links = this.getElementsByTagName('a');
 					    blueimp.Gallery(links, options);
 					};
