added cross links

--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -42,7 +42,13 @@
 					};
 					</script>
 				</div>
-			</div>			
+			</div>
+			<br/>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="#" th:href="@{/image/show}" th:text="#{image.gallery.toUploadImagePage}"></a>
+				</div>	
+			</div>
 		</div>
 	</body>	
 </html>
