--- a/src/main/resources/templates/image/imageUpload.html
+++ b/src/main/resources/templates/image/imageUpload.html
@@ -51,6 +51,11 @@
 				    </form>
 			    </div>
 			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="#" th:href="@{/gallery/show}" th:text="#{image.upload.toImageGallery}"></a>
+				</div>	
+			</div>
 			<br/>
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12">
