download all images as zip file

--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -49,6 +49,11 @@
 					<a href="#" th:href="@{/image/show}" th:text="#{image.gallery.toUploadImagePage}"></a>
 				</div>	
 			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="#" th:href="@{/gallery/download/all}" th:text="#{image.gallery.downloadAll}"></a>
+				</div>	
+			</div>
 		</div>
 	</body>	
 </html>
